<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_rename"
        android:icon="@drawable/edit_rename"/>
    
    
    <item
        android:id="@+id/action_property"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_property"
        android:icon="@drawable/edit_property"/>
 
    <item
        android:id="@+id/action_add_bookmark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_bookmark"
        android:icon="@drawable/edit_bookmark"/>
    
    <item
        android:id="@+id/action_create_shortcut"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_shortcut"
        android:icon="@drawable/edit_shortcut"/>
</menu>
