<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <!-- Size -->
        <TextView
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/details_size_text"
            android:text="@string/filemgr_dialog_details_size" />

        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18sp"
        	android:textColor="@color/holo_blue_dark"
        	android:paddingBottom="2dp"
            android:id="@+id/details_size_value"/>

        <!-- Type -->
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/details_type_text"
            android:text="@string/filemgr_dialog_details_type" />

        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18sp"
        	android:textColor="@color/holo_blue_dark"
        	android:paddingBottom="2dp"
            android:id="@+id/details_type_value"/>

        <!-- Modification date -->
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/details_lastmodified_text"
            android:text="@string/filemgr_dialog_last_modified" />

        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18sp"
        	android:textColor="@color/holo_blue_dark"
        	android:paddingBottom="2dp"
            android:id="@+id/details_lastmodified_value"/>

        <!-- Visibility -->
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/details_hidden_text"
            android:text="@string/filemgr_dialog_hidden_files" />

        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18sp"
        	android:textColor="@color/holo_blue_dark"
        	android:paddingBottom="2dp"
            android:id="@+id/details_hidden_value"/>

        <!-- Permissions -->
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/details_permissions_text"
            android:text="@string/filemgr_dialog_permissions" />

        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18sp"
        	android:textColor="@color/holo_blue_dark"
        	android:paddingBottom="2dp"
            android:id="@+id/details_permissions_value" />
    </LinearLayout>

</ScrollView>